--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
 		
 
 		body {
- 			 background-image: url('./assets/images/bginv.jpg');
+ 			 background-image: url('.skrutt/assets/images/bginv.jpg');
 			 background-repeat: no-repeat;
  			 background-attachment: fixed;
  			 background-size: cover;
