--- a/work.html
+++ b/work.html
@@ -48,7 +48,7 @@
 		
 
 		body {
- 			 background-image: url('./assets/images/bginv2.jpg');
+ 			 background-image: url('.skrutt/assets/images/bginv2.jpg');
 			 background-repeat: no-repeat;
  			 background-attachment: fixed;
  			 background-size: cover;
