--- a/work.html
+++ b/work.html
@@ -62,7 +62,7 @@
 		
 			<div style="display: inline-block; text-align: left;" >
 			<p> <i> this page is under construction</i> </p></br>
-			<p> <i> <a href="index.html">back to homepage</a> </p>
+			<p> <i> <a href="/index.html">back to homepage</a> </p>
 			
 		</div>	
 		
