--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
 			<div style="display: inline-block; text-align: left;" >
 			<p> <i> send me an e-mail, <i> </p>
 			<p> <i> ariadne.sandberg@gmail.com </i> </p></br>
-			<p> <i> <a href="skrutt/index.html">back to homepage</a> </p>
+			<p> <i> <a href="/skrutt/index.html">back to homepage</a> </p>
 			
 		</div>	
 		
