--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 			<div style="display: inline-block; text-align: left;" >
 			<p> <i> Ariadne Sandberg Karali</i> </p></br>
 			<p> <i> <a href="https://www.instagram.com/aatsk/">instagram, </a>
-				 	<a href="skrutt/contact.html">contact, </a> 
-					<a href="skrutt/work.html">work</a> <i> </p>
+				 	<a href="/skrutt/contact.html">contact, </a> 
+					<a href="/skrutt/work.html">work</a> <i> </p>
 			
 		</div>	
 		
