--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		
 
 		body {
- 			 background-image: url('/skrutt/assets/bgimg/bginv.jpg');
+ 			 background-image: url('/skrutt/bginv.jpg');
 			 background-repeat: no-repeat;
  			 background-attachment: fixed;
  			 background-size: cover;
