--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
 		
 
 		body {
- 			 background-image: url('/skrutt/bginv.jpg');
+ 			 background-image: url('/bginv.jpg');
 			 background-repeat: no-repeat;
  			 background-attachment: fixed;
  			 background-size: cover;
@@ -65,7 +65,7 @@
 			<div style="display: inline-block; text-align: left;" >
 			<p> <i> send me an e-mail, <i> </p>
 			<p> <i> ariadne.sandberg@gmail.com </i> </p></br>
-			<p> <i> <a href="/skrutt/index.html">back to homepage</a> </p>
+			<p> <i> <a href="/index.html">back to homepage</a> </p>
 			
 		</div>	
 		
