--- a/work.html
+++ b/work.html
@@ -48,7 +48,7 @@
 		
 
 		body {
- 			 background-image: url('/skrutt/bginv2.jpg');
+ 			 background-image: url('/bginv2.jpg');
 			 background-repeat: no-repeat;
  			 background-attachment: fixed;
  			 background-size: cover;
@@ -62,7 +62,7 @@
 		
 			<div style="display: inline-block; text-align: left;" >
 			<p> <i> this page is under construction</i> </p></br>
-			<p> <i> <a href="/skrutt/index.html">back to homepage</a> </p>
+			<p> <i> <a href="/index.html">back to homepage</a> </p>
 			
 		</div>	
 		
