--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			<p> <i> Ariadne Sandberg Karali</i> </p></br>
 			<p> <i> <a href="https://www.instagram.com/aatsk/">instagram, </a>
 				 	<a href="https://aatsk.github.io/skrutt/contact.html">contact, </a> 
-					<a href="https://aatsk.github.io/skrutt/work.html</a> <i> </p>
+					<a href="https://aatsk.github.io/skrutt/work.html</a>work<i> </p>
 			
 		</div>	
 		
