--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <head>
   	<meta charset="UTF-8">
 	<meta name= "viewport" content="width=device-width, initial-scale=1">
-	<title>contact</title>
+	<title>contact - Ariadne Sandberg Karali</title>
 	
 	<style>
 
