--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 		
 			<div style="display: inline-block; text-align: left;" >
 			<p> <i> Ariadne Sandberg Karali</i> </p></br>
+			<p> <i> BFA Industrial Design Konstfack</i> </p></br>
 			<p> <i> <a href="https://www.instagram.com/aatsk/">instagram, </a>
 				 	<a href="contact.html">contact, </a> 
 					<a href="work.html">work </a> <i> </p>
