--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		<div class = "textcentone noselect">
 		
 			<div style="display: inline-block; text-align: left;" >
-			<p> <i> Ariadne Sandberg Karali</i> </p></br>
+			<p> <i> Ariadne Sandberg Karali</i> </p>
 			<p> <i> BFA Industrial Design Konstfack</i> </p></br>
 			<p> <i> <a href="https://www.instagram.com/aatsk/">instagram, </a>
 				 	<a href="contact.html">contact, </a> 
