--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 		
 			<div style="display: inline-block; text-align: left;" >
 			<p> <i> Ariadne Sandberg Karali</i> </p>
-			<p> <i> BFA Industrial Design Konstfack</i> </p>
-			<p> <i> <a href="https://www.instagram.com/aatsk/">instagram, </a>
+			<p> <i> BFA Industrial Design Konstfack</i> </p> <br>
+			<p> <i> <a href="https://www.instagram.com/aatsk/">instagram, </a> 
 				 	<a href="contact.html">contact, </a> 
 					<a href="work.html">work </a> <i> </p>
 			
