--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 
-<!--Hello! This is my first ever self-made website. If you have constructive feedback about the code, please send me an e-mail so I can learn! :)-->
-
 <html>
     <head>
   	<meta charset="UTF-8">
 	<meta name= "viewport" content="width=device-width, initial-scale=1">
-	<title>Ariadne Sandberg Karali</title>
+	<title>Skrutt.Space</title>
 	
 	<style>
 
@@ -61,12 +59,7 @@
 		<div class = "textcentone noselect">
 		
 			<div style="display: inline-block; text-align: left;" >
-			<p> <i> Ariadne Sandberg Karali</i> </p>
-			<p> <i> BFA Industrial Design Konstfack</i> </p> <br style="line-height: 1px" />
-			<p> <i> <a href="https://www.instagram.com/aatsk/">instagram, </a> 
-				 	<a href="contact.html">contact, </a> 
-					<a href="work.html">work </a> <i> </p>
-			
+			<p> <i> Skrutt.Space</i> </p>
 		</div>	
 		
     </body>
